force-app/main/default/objects/RV_Trigger_Master_Data__c/RV_Trigger_Master_Data__c.object-meta.xml
<CustomObject>
    <label>Trigger Master Data</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Trigger Master Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger Master Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>