force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/BSP__c.field-meta.xml
<CustomField>
    <fullName>BSP__c</fullName>
    <label>BSP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>