force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Max_number_of_triggers_per_month__c.field-meta.xml
<CustomField>
    <fullName>Max_number_of_triggers_per_month__c</fullName>
    <label>Max number of triggers per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>