force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Max_Trigger_Volume__c.field-meta.xml
<CustomField>
    <fullName>Max_Trigger_Volume__c</fullName>
    <label>Max Trigger Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>