force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Min_Trigger_Volume__c.field-meta.xml
<CustomField>
    <fullName>Min_Trigger_Volume__c</fullName>
    <label>Min Trigger Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>