force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Monthly_volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_volume__c</fullName>
    <label>Monthly volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>