force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/MRC_Number__c.field-meta.xml
<CustomField>
    <fullName>MRC_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRC Number</label>
    <referenceTo>MRC__c</referenceTo>
    <relationshipLabel>Trigger Master Datas</relationshipLabel>
    <relationshipName>Trigger_Master_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>