force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Remaining_trigger_volume__c.field-meta.xml
<CustomField>
    <fullName>Remaining_trigger_volume__c</fullName>
    <label>Remaining trigger volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>