force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Remaining_triggers__c.field-meta.xml
<CustomField>
    <fullName>Remaining_triggers__c</fullName>
    <label>Remaining Triggers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>