force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Ship_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Number__c</fullName>
    <label>Ship To Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>