force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/SHT__c.field-meta.xml
<CustomField>
    <fullName>SHT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SHT</label>
    <referenceTo>SHT__c</referenceTo>
    <relationshipLabel>Trigger Master Datas</relationshipLabel>
    <relationshipName>Trigger_Master_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>