force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Sold_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold to Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trigger Master Datas</relationshipLabel>
    <relationshipName>Trigger_Master_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>