force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Sold_to_Number__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Number__c</fullName>
    <label>Sold to Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>