force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Trigger_Month__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Month__c</fullName>
    <label>Trigger Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan</fullName>
                <label>January</label>
            </value>
            <value>
                <fullName>Feb</fullName>
                <label>February</label>
            </value>
            <value>
                <fullName>Mar</fullName>
                <label>March</label>
            </value>
            <value>
                <fullName>Apr</fullName>
                <label>April</label>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>Jun</fullName>
                <label>June</label>
            </value>
            <value>
                <fullName>Jul</fullName>
                <label>July</label>
            </value>
            <value>
                <fullName>Aug</fullName>
                <label>August</label>
            </value>
            <value>
                <fullName>Sep</fullName>
                <label>September</label>
            </value>
            <value>
                <fullName>Oct</fullName>
                <label>October</label>
            </value>
            <value>
                <fullName>Nov</fullName>
                <label>November</label>
            </value>
            <value>
                <fullName>Dec</fullName>
                <label>December</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>