force-app/main/default/objects/RV_Trigger_Master_Data__c/fields/Trigger_Year__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Year__c</fullName>
    <label>Trigger Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>