force-app/main/default/objects/RV_Trigger_Master_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trigger_Month__c</columns>
    <columns>Trigger_Year__c</columns>
    <columns>MRC_Number__c</columns>
    <columns>Sold_to_Name__c</columns>
    <columns>Monthly_volume__c</columns>
    <columns>Remaining_trigger_volume__c</columns>
    <columns>Min_Trigger_Volume__c</columns>
    <columns>Max_Trigger_Volume__c</columns>
    <columns>Max_number_of_triggers_per_month__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>